--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<caption>Student</caption>
+		</thead>
+		<tbody>
+			<tr>
+				<th>Roll number</th>
+				<th>Name</th>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>Aman</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Kunal</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
