--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
 	<table>
 		<thead>
-			<caption>Student</caption>
+			<th>Student</th>
 		</thead>
 		<tbody>
 			<tr>
-				<th>Roll number</th>
-				<th>Name</th>
+				<td>Roll number</td>
+				<td>Name</td>
 			</tr>
 			<tr>
 				<td>1</td>
