--- a/main.html
+++ b/main.html
@@ -10,13 +10,14 @@
 	<!-- the entire body must be written by student -->
 	<table>
 		<thead>
-			<th>Student</th>
+			<th>Roll number</th>
+			<th>Name</th>
 		</thead>
 		<tbody>
-			<tr>
+<!-- 			<tr>
 				<td>Roll number</td>
 				<td>Name</td>
-			</tr>
+			</tr> -->
 			<tr>
 				<td>1</td>
 				<td>Aman</td>
